--- a/src/utils/styles/base/_normalize.scss
+++ b/src/utils/styles/base/_normalize.scss
@@ -81,10 +81,10 @@ table {
   border-radius: 5px;
 }
 
-h2, h3, h4, p, a, button, small {
-  font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;;
+h2, h3, h4, p, a, button, small, input {
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
-  font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;;
+  font-family: "Roboto", sans-serif;
 }
