--- a/src/utils/styles/base/_normalize.scss
+++ b/src/utils/styles/base/_normalize.scss
@@ -81,7 +81,7 @@ table {
   border-radius: 5px;
 }
 
-h2, h3, h4, p, a, button, small, input {
+h2, h3, h4, p, a, button, input, textarea {
   font-family: "Roboto", sans-serif;
 }
 
