--- a/src/components/main/mainContainer/style.module.scss
+++ b/src/components/main/mainContainer/style.module.scss
@@ -2,17 +2,20 @@
 @import url("../../../utils/styles/base/_normalize.scss");
 
 .MainContainer {
+  position: relative;
   display: flex;
+  justify-content: center;
   background-repeat: repeat;
   background-size: 280px;
-  width: 100%;
+  width: calc(100vw - 420px);
   height: 100vh;
 
   &:after {
     content: '';
+    position: absolute;
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     background: linear-gradient(300deg, rgba(0,0,0,.8) 0%, rgba(70, 0, 140, 0.3) 50%, rgba(70, 0, 0, 0.6) 100%);
   }
 }
