--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -1,6 +1,7 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .DefaultButton {
+  position: relative;
   color: #a9a9a9;
   border-radius: 100%;
   transition: 0.2s background-color ease-in-out;
@@ -13,6 +14,24 @@
   width: 25px;
   height: 25px;
   padding: 8px;
+}
+
+.InterButton {
+  position: relative;
+  color: white;
+  border-radius: 100%;
+  background-color: #303030;
+  height: fit-content;
+  transition: 0.2s background-color ease-in-out;
+}
+.InterButton:hover {
+  background-color: #212121;
+}
+.InterButton > svg {
+  display: flex;
+  width: 22px;
+  height: 22px;
+  padding: 14px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
