--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -2,6 +2,7 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .DefaultButton {
+  position: relative;
   color: #a9a9a9;
   border-radius: 100%;
   transition: .2s background-color ease-in-out;
@@ -15,5 +16,25 @@
     width: 25px;
     height: 25px;
     padding: 8px;
+  }
+}
+
+.InterButton {
+  position: relative;
+  color: white;
+  border-radius: 100%;
+  background-color: #303030;
+  height: fit-content;
+  transition: .2s background-color ease-in-out;
+
+  &:hover {
+    background-color: #212121;
+  }
+
+  > svg {
+    display: flex;
+    width: 22px;
+    height: 22px;
+    padding: 14px;
   }
 }
