--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -1,6 +1,51 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .ChatContainer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+.ChatContainer header {
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 5px 18px;
+  background: #212121;
+  border-bottom: 1px solid #2f2f2f;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.ChatContainer header .DeskBlock, .ChatContainer header > span {
+  display: flex;
+  align-items: center;
+}
+.ChatContainer header > span {
+  gap: 8px;
+}
+.ChatContainer header .DeskBlock {
+  line-height: 1.5;
+  gap: 16px;
+}
+.ChatContainer header .DeskBlock div:first-child {
+  width: 42px;
+  height: 42px;
+}
+.ChatContainer header .DeskBlock div:first-child h1 {
+  font-size: 14px;
+}
+.ChatContainer header .DeskBlock h3 {
+  color: white;
+}
+.ChatContainer header .DeskBlock p {
+  font-size: 14px;
+  color: #a9a9a9;
+}
+.ChatContainer .Chat {
   position: relative;
   z-index: 1;
   max-width: 640px;
