--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -2,10 +2,64 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .ChatContainer {
-  position: relative;
-  z-index: 1;
-  max-width: 640px;
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, .5);
+
+  header {
+    position: absolute;
+    z-index: 2;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    padding: 5px 18px;
+    background: #212121FF;
+    border-bottom: 1px solid #2f2f2f;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+
+    .DeskBlock, > span {
+      display: flex;
+      align-items: center;
+    }
+
+    > span {
+      gap: 8px;
+    }
+
+    .DeskBlock {
+      line-height: 1.5;
+      gap: 16px;
+
+      div:first-child {
+        width: 42px;
+        height: 42px;
+
+        h1 {
+          font-size: 14px;
+        }
+      }
+
+      h3 {
+        color: white;
+      }
+
+      p {
+        font-size: 14px;
+        color: #a9a9a9;
+      }
+    }
+  }
+
+  .Chat {
+    position: relative;
+    z-index: 1;
+    max-width: 640px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .5);
+  }
 }
