--- a/src/utils/styles/base/_normalize.scss
+++ b/src/utils/styles/base/_normalize.scss
@@ -82,7 +82,7 @@ table {
 }
 
 h2, h3, h4, p, a, button, input, textarea {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto Thin", sans-serif;
 }
 
 h1 {
