--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -2,17 +2,19 @@
 
 .ChatContainer {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+  transition: 0.3s all ease-in-out;
 }
 .ChatContainer header {
-  position: absolute;
   z-index: 2;
   display: flex;
+  gap: 16px;
   justify-content: space-between;
   width: 100%;
-  padding: 5px 18px;
+  padding: 6.5px 18px;
   background: #212121;
   border-bottom: 1px solid #2f2f2f;
   -webkit-user-select: none;
@@ -25,7 +27,8 @@
   align-items: center;
 }
 .ChatContainer header > span {
-  gap: 8px;
+  justify-content: end;
+  flex-grow: 1;
 }
 .ChatContainer header > span > :last-child ul {
   right: 0;
@@ -33,7 +36,7 @@
   transform-origin: top right;
 }
 .ChatContainer header .DeskBlock {
-  line-height: 1.5;
+  line-height: 1.4;
   gap: 16px;
 }
 .ChatContainer header .DeskBlock div:first-child {
