--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -3,17 +3,19 @@
 
 .ChatContainer {
   display: flex;
-  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   width: 100%;
   height: 100%;
+  transition: .3s all ease-in-out;
 
   header {
-    position: absolute;
     z-index: 2;
     display: flex;
+    gap: 16px;
     justify-content: space-between;
     width: 100%;
-    padding: 5px 18px;
+    padding: 6.5px 18px;
     background: #212121FF;
     border-bottom: 1px solid #2f2f2f;
     -webkit-user-select: none;
@@ -27,7 +29,8 @@
     }
 
     > span {
-      gap: 8px;
+      justify-content: end;
+      flex-grow: 1;
 
       >:last-child ul {
         right: 0;
@@ -37,7 +40,7 @@
     }
 
     .DeskBlock {
-      line-height: 1.5;
+      line-height: 1.4;
       gap: 16px;
 
       div:first-child {
