--- a/src/components/searchBlock/style.module.css
+++ b/src/components/searchBlock/style.module.css
@@ -4,11 +4,12 @@
   position: relative;
   display: flex;
   width: 100%;
+  height: 100%;
   padding: 0 8px;
+  transform-origin: right;
 }
 .SearchContainer .SearchInput {
   width: 100%;
-  height: 100%;
   border-radius: 22px;
   background-color: #181818;
   border: 1px solid #2f2f2f;
