--- a/src/components/searchBlock/style.module.scss
+++ b/src/components/searchBlock/style.module.scss
@@ -5,11 +5,12 @@
   position: relative;
   display: flex;
   width: 100%;
+  height: 100%;
   padding: 0 8px;
+  transform-origin: right;
 
   .SearchInput {
     width: 100%;
-    height: 100%;
     border-radius: 22px;
     background-color: #181818;
     border: 1px solid #2f2f2f;
