feat: new components added

--- a/src/components/main/mainContainer/style.module.css
+++ b/src/components/main/mainContainer/style.module.css
@@ -8,6 +8,7 @@
   background-size: 280px;
   width: calc(100vw - 420px);
   height: 100vh;
+  overflow: hidden;
 }
 .MainContainer:after {
   content: "";
