--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -53,13 +53,26 @@
   font-size: 14px;
   color: #a9a9a9;
 }
+.ChatContainer .MessageBlock {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  color: white;
+  width: 100%;
+}
 .ChatContainer .Chat {
   position: relative;
   z-index: 1;
-  max-width: 640px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  max-width: 700px;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.3);
+  padding: 0 16px 80px 16px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
