--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -63,12 +63,26 @@
     }
   }
 
+  .MessageBlock {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    color: white;
+    width: 100%;
+  }
+
   .Chat {
     position: relative;
     z-index: 1;
-    max-width: 640px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    max-width: 700px;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, .3);
+    padding: 0 16px 80px 16px;
   }
 }
