--- a/src/components/sidebar/rightSidebar/animation.css
+++ b/src/components/sidebar/rightSidebar/animation.css
@@ -1,12 +1,12 @@
 .right-sidebar-node-enter {
+    width: 0;
     opacity: 0;
-    transform: scale(0);
 }
 
 .right-sidebar-node-enter-active {
     opacity: 1;
-    transform: scale(1);
-    transition: opacity .3s ease-in-out, transform .3s ease-in-out;
+    width: 100%;
+    transition: opacity .3s ease-in-out, width .3s ease-in-out;
 }
 
 .right-sidebar-node-exit {
@@ -15,6 +15,6 @@
 
 .right-sidebar-node-exit-active {
     opacity: 0;
-    transform: scale(0);
-    transition: opacity .3s ease-in-out, transform .3s ease-in-out;
+    width: 0;
+    transition: opacity .3s ease-in-out, width .3s ease-in-out;
 }
