--- a/src/components/sidebar/rightSidebar/style.module.css
+++ b/src/components/sidebar/rightSidebar/style.module.css
@@ -1,6 +1,12 @@
 @import url("../../../utils/styles/base/_normalize.scss");
 
-.TopBar {
+.Wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  min-width: 418px;
+}
+.Wrapper .TopBar {
   position: absolute;
   z-index: 5;
   display: flex;
@@ -14,54 +20,64 @@
   background-color: rgba(33, 33, 33, 0.9);
   backdrop-filter: blur(5px);
 }
-
-.EntityImageBlock {
+.Wrapper .EntityImageBlock {
   display: flex;
   align-items: end;
-  width: inherit;
-  max-height: 420px;
-  height: 100%;
+  width: 100%;
+  height: 420px;
   background-size: cover;
   background-position: center center;
   padding: 8px 16px;
 }
-.EntityImageBlock div {
+.Wrapper .EntityImageBlock div {
   line-height: 1.3;
 }
-.EntityImageBlock div h1 {
+.Wrapper .EntityImageBlock div h1 {
   color: white;
   font-size: 20px;
 }
-.EntityImageBlock div p {
+.Wrapper .EntityImageBlock div p {
   font-size: 14px;
   color: #a9a9a9;
 }
-
-.InfoList {
+.Wrapper .InfoList {
   padding: 8px;
   line-height: 1.5;
+  background-color: #212121;
 }
-.InfoList li {
+.Wrapper .InfoList li {
   display: flex;
-  align-items: center;
-  gap: 16px;
+  width: 100%;
+}
+.Wrapper .InfoList li > button {
   color: white;
   font-size: 16px;
+  width: 100%;
   padding: 8px;
-  cursor: pointer;
   border-radius: 10px;
   transition: 0.2s background-color ease-in-out;
 }
-.InfoList li .LiType {
+.Wrapper .InfoList li > button, .Wrapper .InfoList li > button span {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.Wrapper .InfoList li > button .LiType {
   font-size: 14px;
   color: #a9a9a9;
 }
-.InfoList li:hover {
+.Wrapper .InfoList li > button:hover {
   background-color: #2b2b2b;
 }
-.InfoList li svg {
+.Wrapper .InfoList li > button:active {
+  background-color: #323232;
+}
+.Wrapper .InfoList li > button svg {
   min-width: 28px;
   min-height: 28px;
+}
+.Wrapper .InfoList li > button button {
+  margin: 0 8px 0 auto;
 }
 
 /*# sourceMappingURL=style.module.css.map */
