--- a/src/components/sidebar/rightSidebar/style.module.scss
+++ b/src/components/sidebar/rightSidebar/style.module.scss
@@ -1,73 +1,96 @@
 @use '../../../utils/styles/base/_variables.css' as v;
 @import url("../../../utils/styles/base/_normalize.scss");
 
-.TopBar {
-  position: absolute;
-  z-index: 5;
+.Wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  color: white;
-  padding: 8px 8px;
-  width: 100%;
-  height: 56px;
-  font-size: 20px;
-  background-color: rgba(33, 33, 33, 0.9);
-  backdrop-filter: blur(5px);
-}
+  flex-direction: column;
+  min-width: 418px;
 
-.EntityImageBlock {
-  display: flex;
-  align-items: end;
-  width: inherit;
-  max-height: 420px;
-  height: 100%;
-  background-size: cover;
-  background-position: center center;
-  padding: 8px 16px;
+  .TopBar {
+    position: absolute;
+    z-index: 5;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    padding: 8px 8px;
+    width: 100%;
+    height: 56px;
+    font-size: 20px;
+    background-color: rgba(33, 33, 33, 0.9);
+    backdrop-filter: blur(5px);
+  }
 
-  div {
-    line-height: 1.3;
+  .EntityImageBlock {
+    display: flex;
+    align-items: end;
+    width: 100%;
+    height: 420px;
+    background-size: cover;
+    background-position: center center;
+    padding: 8px 16px;
 
-    h1 {
-      color: white;
-      font-size: 20px;
-    }
+    div {
+      line-height: 1.3;
 
-    p {
-      font-size: 14px;
-      color: #a9a9a9;
+      h1 {
+        color: white;
+        font-size: 20px;
+      }
+
+      p {
+        font-size: 14px;
+        color: #a9a9a9;
+      }
     }
   }
-}
 
-.InfoList {
-  padding: 8px;
-  line-height: 1.5;
-
-  li {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    color: white;
-    font-size: 16px;
+  .InfoList {
     padding: 8px;
-    cursor: pointer;
-    border-radius: 10px;
-    transition: .2s background-color ease-in-out;
+    line-height: 1.5;
+    background-color: #212121;
 
-    .LiType {
-      font-size: 14px;
-      color: #a9a9a9;
-    }
+    li {
+      display: flex;
+      width: 100%;
 
-    &:hover {
-      background-color: #2b2b2b;
-    }
+      > button {
+        &, span {
+          display: flex;
+          align-items: center;
+          gap: 16px;
+        }
 
-    svg {
-      min-width: 28px;
-      min-height: 28px;
+        color: white;
+        font-size: 16px;
+        width: 100%;
+        padding: 8px;
+        border-radius: 10px;
+        transition: .2s background-color ease-in-out;
+
+        .LiType {
+          font-size: 14px;
+          color: #a9a9a9;
+        }
+
+        &:hover {
+          background-color: #2b2b2b;
+        }
+
+        &:active {
+          background-color: #323232;
+        }
+
+        svg {
+          min-width: 28px;
+          min-height: 28px;
+        }
+
+        button {
+          margin: 0 8px 0 auto;
+        }
+      }
     }
   }
 }
