--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -4,7 +4,7 @@
   position: relative;
   color: #a9a9a9;
   border-radius: 100%;
-  transition: 0.2s background-color ease-in-out;
+  transition: 0.2s background-color ease-in-out, 0.2s color ease-in-out;
 }
 .DefaultButton:hover {
   background-color: #303030;
@@ -64,6 +64,11 @@
 .SwitchButtonOn:after {
   left: 15px;
   border: 2px solid white;
+}
+
+.WhiteButton:hover {
+  background-color: #171717;
+  color: white;
 }
 
 /*# sourceMappingURL=style.module.css.map */
