--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   color: #a9a9a9;
   border-radius: 100%;
-  transition: .2s background-color ease-in-out;
+  transition: .2s background-color ease-in-out, .2s color ease-in-out;
 
   &:hover {
     background-color: #303030;
@@ -70,5 +70,12 @@
   &:after {
     left: 15px;
     border: 2px solid white;
+  }
+}
+
+.WhiteButton {
+  &:hover {
+    background-color: #171717;
+    color: white;
   }
 }
