--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -54,16 +54,19 @@
   color: #a9a9a9;
 }
 .ChatContainer .MessageBlock {
-  position: relative;
+  position: absolute;
   display: flex;
   flex-direction: column;
   gap: 8px;
   color: white;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  padding: 8px 8px 75px 8px;
 }
 .ChatContainer .Chat {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -72,7 +75,6 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3);
-  padding: 0 16px 80px 16px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
