--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -64,17 +64,20 @@
   }
 
   .MessageBlock {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-direction: column;
     gap: 8px;
     color: white;
     width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    padding: 8px 8px 75px 8px;
   }
 
   .Chat {
     position: relative;
-    z-index: 1;
+    z-index: 2;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,6 +86,5 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, .3);
-    padding: 0 16px 80px 16px;
   }
 }
