--- a/src/components/message/style.module.css
+++ b/src/components/message/style.module.css
@@ -8,17 +8,25 @@
   line-height: 1.5;
   max-width: 75%;
 }
-.ChatMessageContainer .ChatMessageFile > div {
+.ChatMessageContainer .ReplyBlock {
+  border-left: 3px solid white;
+  background-color: #2f2f2f;
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.4;
+  transition: 0.2s background-color ease-in-out;
+}
+.ChatMessageContainer .ReplyBlock:hover {
+  background-color: #353535;
+}
+.ChatMessageContainer, .ChatMessageContainer .ChatMessageMedia {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 4px;
 }
-.ChatMessageContainer .ChatMessageFile > div > * {
-  border: 1px solid #212121;
-  width: 33.333333%;
-}
-.ChatMessageContainer .ChatMessageFile > div > :first-child {
-  height: 100%;
-  width: 100%;
+.ChatMessageContainer .ChatMessageMedia {
+  overflow: hidden;
 }
 
 .Owner {
