--- a/src/components/slider/style.module.css
+++ b/src/components/slider/style.module.css
@@ -11,6 +11,8 @@
   padding: 8px 20px;
 }
 .SliderContainer .ToolsBlock {
+  position: relative;
+  z-index: 3;
   display: flex;
   justify-content: space-between;
 }
@@ -27,12 +29,61 @@
   width: 44px;
   height: 44px;
 }
+.SliderContainer .ToolsBlock > button > :first-child h1 {
+  font-size: 15px;
+}
 .SliderContainer .ToolsBlock > button:hover {
   opacity: 1;
+}
+.SliderContainer .ToolsBlock > span {
+  display: flex;
+  align-items: center;
 }
 .SliderContainer .ToolsBlock > span svg {
   width: 24px;
   height: 24px;
+}
+.SliderContainer .Slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  height: 100%;
+}
+.SliderContainer .Slider > :first-child {
+  position: absolute;
+  top: 50%;
+  z-index: 2;
+  display: flex;
+  width: 100vw;
+  padding: 0 20px;
+  transform: translateY(-50%);
+}
+.SliderContainer .Slider > :first-child > :last-child {
+  margin-left: auto;
+}
+.SliderContainer .Slider > :first-child button svg {
+  width: 48px;
+  height: 48px;
+}
+.SliderContainer .Slider .Swipe {
+  position: relative;
+  display: flex;
+  width: 100%;
+  left: 0;
+  transition: 0.3s left ease-in-out;
+}
+.SliderContainer .Slider .Swipe .ImageBlock {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100%;
+}
+.SliderContainer .Slider .Swipe .ImageBlock img {
+  z-index: 2;
+  max-height: 65%;
+  object-fit: contain;
 }
 
 /*# sourceMappingURL=style.module.css.map */
