--- a/src/components/slider/style.module.scss
+++ b/src/components/slider/style.module.scss
@@ -12,6 +12,8 @@
   padding: 8px 20px;
 
   .ToolsBlock {
+    position: relative;
+    z-index: 3;
     display: flex;
     justify-content: space-between;
 
@@ -25,9 +27,13 @@
         font-size: 14px;
       }
 
-      >:first-child {
+      > :first-child {
         width: 44px;
         height: 44px;
+
+        h1 {
+          font-size: 15px;
+        }
       }
 
       &:hover {
@@ -36,9 +42,61 @@
     }
 
     > span {
+      display: flex;
+      align-items: center;
+
       svg {
         width: 24px;
         height: 24px;
+      }
+    }
+  }
+
+  .Slider {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    height: 100%;
+
+    >:first-child {
+      position: absolute;
+      top: 50%;
+      z-index: 2;
+      display: flex;
+      width: 100vw;
+      padding: 0 20px;
+      transform: translateY(-50%);
+
+      >:last-child {
+        margin-left: auto;
+      }
+
+      button svg {
+        width: 48px;
+        height: 48px;
+      }
+    }
+
+    .Swipe {
+      position: relative;
+      display: flex;
+      width: 100%;
+      left: 0;
+      transition: .3s left ease-in-out;
+
+      .ImageBlock {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100vw;
+        height: 100%;
+
+        img {
+          z-index: 2;
+          max-height: 65%;
+          object-fit: contain;
+        }
       }
     }
   }
