--- a/src/components/slider/style.module.css
+++ b/src/components/slider/style.module.css
@@ -9,6 +9,10 @@
   height: 100vh;
   background-color: rgba(0, 0, 0, 0.8);
   padding: 8px 20px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .SliderContainer .ToolsBlock {
   position: relative;
@@ -43,28 +47,26 @@
   width: 24px;
   height: 24px;
 }
+.SliderContainer .LeftArrow, .SliderContainer .RightArrow {
+  position: absolute;
+  display: flex;
+  top: 50%;
+  z-index: 3;
+  transform: translateY(-50%);
+}
+.SliderContainer .LeftArrow button svg, .SliderContainer .RightArrow button svg {
+  width: 48px;
+  height: 48px;
+}
+.SliderContainer .RightArrow {
+  right: 20px;
+}
 .SliderContainer .Slider {
   position: absolute;
   top: 0;
   left: 0;
   display: flex;
   height: 100%;
-}
-.SliderContainer .Slider > :first-child {
-  position: absolute;
-  top: 50%;
-  z-index: 2;
-  display: flex;
-  width: 100vw;
-  padding: 0 20px;
-  transform: translateY(-50%);
-}
-.SliderContainer .Slider > :first-child > :last-child {
-  margin-left: auto;
-}
-.SliderContainer .Slider > :first-child button svg {
-  width: 48px;
-  height: 48px;
 }
 .SliderContainer .Slider .Swipe {
   position: relative;
