feat: new components added

--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -75,7 +75,7 @@
 
 .WhiteButton {
   &:hover {
-    background-color: #171717;
+    background-color: rgba(23, 23, 23, 0.5);
     color: white;
   }
 }
