feat: new components added

--- a/src/components/slider/style.module.css
+++ b/src/components/slider/style.module.css
@@ -123,6 +123,7 @@
   transform: scale(1);
 }
 .SliderContainer .Slider .Swipe .ImageBlock img {
+  position: relative;
   z-index: 2;
   max-height: 65%;
   object-fit: contain;
