--- a/src/components/chat/style.module.css
+++ b/src/components/chat/style.module.css
@@ -7,8 +7,12 @@
   width: 100%;
   height: 100%;
   transition: 0.3s all ease-in-out;
+  position: relative;
+  z-index: 5;
 }
 .ChatContainer header {
+  position: absolute;
+  top: 0;
   z-index: 2;
   display: flex;
   gap: 16px;
@@ -61,20 +65,14 @@
   color: white;
   width: 100%;
   height: 100%;
+  top: 0;
+  max-height: calc(100% - 65px);
   overflow-y: scroll;
-  padding: 8px 8px 75px 8px;
-}
-.ChatContainer .Chat {
-  position: relative;
-  z-index: 2;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: end;
   max-width: 700px;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.3);
+  padding: 64px 8px 8px 8px;
+}
+.ChatContainer > :last-child {
+  max-width: 700px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
