--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -8,8 +8,12 @@
   width: 100%;
   height: 100%;
   transition: .3s all ease-in-out;
+  position: relative;
+  z-index: 5;
 
   header {
+    position: absolute;
+    top: 0;
     z-index: 2;
     display: flex;
     gap: 16px;
@@ -32,7 +36,7 @@
       justify-content: end;
       flex-grow: 1;
 
-      >:last-child ul {
+      > :last-child ul {
         right: 0;
         top: calc(100% + 13px);
         transform-origin: top right;
@@ -71,20 +75,14 @@
     color: white;
     width: 100%;
     height: 100%;
+    top: 0;
+    max-height: calc(100% - 65px);
     overflow-y: scroll;
-    padding: 8px 8px 75px 8px;
+    max-width: 700px;
+    padding: 64px 8px 8px 8px;
   }
 
-  .Chat {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: end;
+  > :last-child {
     max-width: 700px;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, .3);
   }
 }
