--- a/src/components/message/style.module.scss
+++ b/src/components/message/style.module.scss
@@ -4,7 +4,7 @@
 .ChatMessageContainer {
   position: relative;
   background-color: #181818;
-  padding: 8px;
+  padding: 8px 8px 15px 8px;
   border-radius: 15px 15px 15px 0;
   line-height: 1.5;
   max-width: 75%;
@@ -23,14 +23,65 @@
     }
   }
 
-  &, .ChatMessageMedia {
+  &, .ChatMessageBlock {
     display: flex;
     flex-direction: column;
     gap: 4px;
   }
 
-  .ChatMessageMedia {
+  .ChatMessageBlock {
     overflow: hidden;
+
+    small {
+      position: absolute;
+      right: 8px;
+      bottom: 4px;
+      line-height: 1;
+      color: #a9a9a9;
+      font-size: 12px;
+    }
+  }
+
+  .ChatDocumentBlock {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+
+    > a {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      line-height: 1.4;
+      color: white;
+      padding: 5px;
+      border-radius: 5px;
+      transition: .2s background-color ease-in-out;
+
+      &:hover {
+        background-color: #2f2f2f;
+      }
+
+      svg {
+        stroke-width: 1px;
+        width: 48px;
+        height: 48px;
+      }
+
+      > div {
+        width: calc(100% - 65px);
+
+        h4 {
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          font-size: 15px;
+        }
+
+        p {
+          font-size: 13px;
+        }
+      }
+    }
   }
 }
 
