--- a/src/components/popup/style.module.css
+++ b/src/components/popup/style.module.css
@@ -1,59 +1,82 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .PopupContainer {
-  position: absolute;
-  top: calc(100% + 10px);
-  z-index: 99;
-  padding: 5px;
-  background-color: rgba(40, 40, 40, 0.9);
-  backdrop-filter: blur(3px);
-  overflow: hidden;
-  border-radius: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-  transform-origin: top left;
-  cursor: default;
-}
-.PopupContainer:before {
-  content: "";
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  z-index: -1;
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(300deg, rgba(33, 33, 33, 0.4) 20%, rgba(70, 0, 0, 0.1) 100%);
-}
-.PopupContainer li {
+  z-index: 5;
   display: flex;
   align-items: center;
-  gap: 20px;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.PopupContainer > div {
+  width: 400px;
+  background-color: #212121;
+  border-radius: 10px;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1411764706), 0 3px 1px -2px rgba(0, 0, 0, 0.1215686275), 0 1px 5px rgba(0, 0, 0, 0.2);
+  padding: 8px 16px;
   color: white;
-  text-wrap: nowrap;
-  font-size: 14px;
-  font-weight: bolder;
-  padding: 5px 10px;
-  border-radius: 5px;
+}
+.PopupContainer > div .ToolsBlock {
+  justify-content: space-between;
+}
+.PopupContainer > div .ToolsBlock, .PopupContainer > div .ToolsBlock span, .PopupContainer > div .ToolsBlock svg {
+  display: flex;
+  align-items: center;
+}
+.PopupContainer > div .ToolsBlock h1 {
+  margin-left: 24px;
+  font-size: 20px;
+}
+.PopupContainer > div .ToolsBlock label svg {
+  width: 25px;
+  height: 25px;
+  padding: 8px;
   cursor: pointer;
 }
-.PopupContainer li svg {
-  width: 24px;
-  height: 24px;
+.PopupContainer > div .FilesBlock {
+  flex-direction: column;
+  gap: 8px;
+  padding: 8px 0;
 }
-.PopupContainer li:hover {
-  background-color: rgba(66, 66, 66, 0.5);
-}
-
-.EmojiContainer {
+.PopupContainer > div .FilesBlock, .PopupContainer > div .FilesBlock > div {
   display: flex;
-  flex-wrap: wrap;
-  width: 330px;
 }
-.EmojiContainer li {
-  justify-content: center;
-  width: 34px;
-  height: 34px;
-  padding: 20px;
-  font-size: 28px;
+.PopupContainer > div .FilesBlock > div {
+  align-items: center;
+  gap: 8px;
+  line-height: 1.4;
+  width: calc(100% - 65px);
+}
+.PopupContainer > div .FilesBlock > div h4 {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  font-size: 15px;
+}
+.PopupContainer > div .FilesBlock > div p {
+  font-size: 13px;
+}
+.PopupContainer > div .FilesBlock > div svg, .PopupContainer > div .FilesBlock > div label {
+  width: 50px;
+  height: 50px;
+  stroke-width: 1px;
+}
+.PopupContainer > div .SubmitBlock {
+  display: flex;
+  align-items: end;
+}
+.PopupContainer > div .SubmitBlock > button {
+  padding: 14px 16px;
+  background-color: #1c1c1c;
+  border-radius: 10px;
+  transition: 0.2s background-color ease-in-out;
+}
+.PopupContainer > div .SubmitBlock > button:hover {
+  background-color: #191919;
 }
 
 /*# sourceMappingURL=style.module.css.map */
