--- a/src/components/popup/style.module.scss
+++ b/src/components/popup/style.module.scss
@@ -6,90 +6,28 @@
   top: 0;
   left: 0;
   z-index: 5;
-  display: flex;
   align-items: center;
-  justify-content: center;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
 
+  &, > div {
+    display: flex;
+    justify-content: center;
+  }
+
   > div {
+    flex-direction: column;
+    gap: 8px;
     width: 400px;
     background-color: #212121;
     border-radius: 10px;
     box-shadow: 0 2px 2px #00000024,0 3px 1px -2px #0000001f,0 1px 5px #0003;
-    padding: 8px 16px;
+    padding: 8px;
     color: white;
 
-    .ToolsBlock {
-      justify-content: space-between;
-
-      &, span, svg {
-        display: flex;
-        align-items: center;
-      }
-
-      h1 {
-        margin-left: 24px;
-        font-size: 20px;
-      }
-
-      label svg {
-        width: 25px;
-        height: 25px;
-        padding: 8px;
-        cursor: pointer;
-      }
-    }
-
-    .FilesBlock {
-      flex-direction: column;
-      gap: 8px;
-      padding: 8px 0;
-
-      &, > div {
-        display: flex;
-      }
-
-      > div {
-        align-items: center;
-        gap: 8px;
-        line-height: 1.4;
-        width: calc(100% - 65px);
-
-        h4 {
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          font-size: 15px;
-        }
-
-        p {
-          font-size: 13px;
-        }
-
-        svg, label {
-          width: 50px;
-          height: 50px;
-          stroke-width: 1px;
-        }
-      }
-    }
-
-    .SubmitBlock {
-      display: flex;
-      align-items: end;
-
-      > button {
-        padding: 14px 16px;
-        background-color: #1c1c1c;
-        border-radius: 10px;
-        transition: .2s background-color ease-in-out;
-
-        &:hover {
-          background-color: #191919;
-        }
-      }
+    img {
+      cursor: auto;
     }
   }
 }
