feat: new components added

--- a/src/utils/styles/base/_normalize.scss
+++ b/src/utils/styles/base/_normalize.scss
@@ -50,7 +50,7 @@ html {
 
 body {
   line-height: 1;
-  background-color: rgb(24, 24, 24);
+  background-color: rgb(28, 28, 28);
 }
 
 ol, ul {
@@ -81,7 +81,7 @@ table {
   border-radius: 5px;
 }
 
-h2, h3, h4, p, a, button, input, textarea {
+h2, h3, h4, p, a, button, input, textarea, small {
   font-family: "Roboto Thin", sans-serif;
 }
 
