--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -71,4 +71,18 @@
   color: white;
 }
 
+.FormButton {
+  width: 100%;
+  background-color: #2f2f2f;
+  padding: 15px 0;
+  text-align: center;
+  border-radius: 10px;
+  transition: 0.2s background-color ease-in-out;
+  font-weight: 600;
+  margin-top: 10px;
+}
+.FormButton:hover {
+  background-color: #282828;
+}
+
 /*# sourceMappingURL=style.module.css.map */
