--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -79,3 +79,18 @@
     color: white;
   }
 }
+
+.FormButton {
+  width: 100%;
+  background-color: #2f2f2f;
+  padding: 15px 0;
+  text-align: center;
+  border-radius: 10px;
+  transition: .2s background-color ease-in-out;
+  font-weight: 600;
+  margin-top: 10px;
+
+  &:hover {
+    background-color: #282828;
+  }
+}
