--- a/src/components/main/mainContainer/style.module.css
+++ b/src/components/main/mainContainer/style.module.css
@@ -6,6 +6,7 @@
   justify-content: center;
   background-repeat: repeat;
   background-size: 280px;
+  background-color: black;
   width: calc(100vw - 420px);
   height: 100vh;
   overflow: hidden;
@@ -16,7 +17,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(300deg, rgba(0, 0, 0, 0.8) 0%, rgba(70, 0, 140, 0.3) 50%, rgba(70, 0, 0, 0.6) 100%);
+  background: linear-gradient(300deg, rgba(0, 0, 0, 0.8) 0%, rgba(70, 0, 140, 0.2) 50%, rgba(70, 0, 0, 0.6) 100%);
 }
 
 /*# sourceMappingURL=style.module.css.map */
