--- a/src/components/notFound/style.module.css
+++ b/src/components/notFound/style.module.css
@@ -1,35 +1,29 @@
 @import url("../../utils/styles/base/_normalize.scss");
 
 .NotFoundContainer {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   height: 100vh;
-  font-size: 70px;
-  font-family: "Kumbh Sans", "sans-serif";
   background-position: center center;
   background-size: cover;
   background-image: url("https://media1.tenor.com/m/sls2zgBMCf4AAAAd/gachi.gif");
   -webkit-box-shadow: 10px 10px 400px 250px rgba(0, 0, 0, 0.75) inset;
   box-shadow: 10px 10px 400px 250px rgba(0, 0, 0, 0.75) inset;
   gap: 20px;
+  color: white;
+  font-size: 50px;
 }
 .NotFoundContainer h1 {
   margin-bottom: 14px;
+  font-size: 140px;
 }
 .NotFoundContainer a {
   position: relative;
   border-radius: 15px;
+  color: white;
+  font-size: 24px;
 }
 .NotFoundContainer a:hover {
   text-decoration: underline;
