--- a/src/components/authForm/inputForm/style.module.scss
+++ b/src/components/authForm/inputForm/style.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   width: 100%;
 
-  input {
+  input, textarea {
     padding: 15px;
     border-radius: 10px;
     color: #9d9d9d;
@@ -24,6 +24,11 @@
       color: white;
       box-shadow: 0 0 0 2px white;
     }
+  }
+
+  textarea {
+    word-wrap: break-word;
+    word-break: break-all;
   }
 }
 
