feat: new components added

--- a/src/components/layout/style.module.css
+++ b/src/components/layout/style.module.css
@@ -6,6 +6,7 @@
 .LayoutContainer .Layout {
   display: flex;
   max-width: 1680px;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.module.css.map */
