feat: new components added

--- a/src/components/message/style.module.scss
+++ b/src/components/message/style.module.scss
@@ -8,6 +8,7 @@
   border-radius: 15px 15px 15px 0;
   line-height: 1.5;
   max-width: 75%;
+  min-width: 180px;
 
   .ReplyBlock {
     border-left: 3px solid white;
