--- a/src/components/message/style.module.css
+++ b/src/components/message/style.module.css
@@ -7,6 +7,7 @@
   border-radius: 15px 15px 15px 0;
   line-height: 1.5;
   max-width: 75%;
+  min-width: 180px;
 }
 .ChatMessageContainer .ReplyBlock {
   border-left: 3px solid white;
