feat: new components added

--- a/src/components/loadFile/style.module.css
+++ b/src/components/loadFile/style.module.css
@@ -9,6 +9,12 @@
   width: 54px;
   height: 54px;
   border-radius: 50%;
+  overflow: hidden;
+}
+.ImageContainer img {
+  width: inherit;
+  height: inherit;
+  object-fit: cover;
 }
 .ImageContainer h1 {
   font-size: 18px;
