--- a/src/components/message/style.module.scss
+++ b/src/components/message/style.module.scss
@@ -41,6 +41,10 @@
       color: #a9a9a9;
       font-size: 12px;
     }
+
+    ul {
+      transform-origin: center center;
+    }
   }
 
   .ChatDocumentBlock {
