--- a/src/components/dropDown/style.module.scss
+++ b/src/components/dropDown/style.module.scss
@@ -8,9 +8,10 @@
   padding: 5px;
   background-color: rgba(40, 40, 40, .9);
   backdrop-filter: blur(3px);
+  min-width: 190px;
   overflow: hidden;
   border-radius: 10px;
-  box-shadow: rgba(50, 50, 93, 0.25) 0 6px 12px -2px, rgba(0, 0, 0, .3) 0px 3px 7px -3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .15);
   transform-origin: top left;
   cursor: default;
 
