--- a/src/components/inputBlock/style.module.css
+++ b/src/components/inputBlock/style.module.css
@@ -10,14 +10,55 @@
 }
 .InputContainer .Input {
   display: flex;
+  flex-wrap: wrap;
   align-items: end;
+  gap: 5px;
   width: 100%;
-  min-height: 50px;
   background-color: #212121;
   border-radius: 18px;
   padding: 5px 8px;
 }
-.InputContainer .Input textarea {
+.InputContainer .Input .ReplyBlock {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  width: 100%;
+  color: white;
+  line-height: 1.3;
+}
+.InputContainer .Input .ReplyBlock .ReplyMessage {
+  width: 100%;
+  border-left: 3px solid white;
+  background-color: #2f2f2f;
+  padding: 2px 5px;
+  border-radius: 5px;
+  font-size: 14px;
+  line-height: 1.4;
+  transition: 0.2s background-color ease-in-out;
+}
+.InputContainer .Input .ReplyBlock .ReplyMessage:hover {
+  background-color: #353535;
+}
+.InputContainer .Input .ReplyBlock .ReplyMessage h4, .InputContainer .Input .ReplyBlock .ReplyMessage p {
+  font-size: 14px;
+}
+.InputContainer .Input .ReplyBlock .ReplyMessage p {
+  color: #a9a9a9;
+}
+.InputContainer .Input .ReplyBlock svg {
+  display: flex;
+  width: 25px;
+  height: 25px;
+  padding: 8px;
+  color: #a9a9a9;
+}
+.InputContainer .Input .InputBlock {
+  display: flex;
+  align-items: end;
+  width: 100%;
+  min-height: 40px;
+}
+.InputContainer .Input .InputBlock textarea {
   align-self: center;
   caret-color: #656565;
   width: 100%;
@@ -26,18 +67,18 @@
   padding: 0 8px;
   overflow-wrap: break-word;
 }
-.InputContainer .Input textarea::placeholder {
+.InputContainer .Input .InputBlock textarea::placeholder {
   color: #989898;
 }
-.InputContainer .Input:first-child ul, .InputContainer .Input:last-child ul {
+.InputContainer .Input .InputBlock:first-child ul, .InputContainer .Input .InputBlock:last-child ul {
   top: unset;
   bottom: calc(100% + 10px);
 }
-.InputContainer .Input > button ul {
+.InputContainer .Input .InputBlock > button ul {
   right: 0;
   transform-origin: bottom right;
 }
-.InputContainer .Input > :first-child ul {
+.InputContainer .Input .InputBlock > :first-child ul {
   left: 0;
   transform-origin: bottom left;
 }
