--- a/src/components/inputBlock/style.module.scss
+++ b/src/components/inputBlock/style.module.scss
@@ -11,45 +11,93 @@
 
   .Input {
     display: flex;
+    flex-wrap: wrap;
     align-items: end;
+    gap: 5px;
     width: 100%;
-    min-height: 50px;
     background-color: #212121;
     border-radius: 18px;
     padding: 5px 8px;
 
-    textarea {
-      align-self: center;
-      caret-color: #656565;
+    .ReplyBlock {
+      display: flex;
+      align-items: center;
+      gap: 8px;
       width: 100%;
       color: white;
-      line-height: 1.5;
-      padding: 0 8px;
-      overflow-wrap: break-word;
+      line-height: 1.3;
 
-      &::placeholder {
-        color: #989898;
+      .ReplyMessage {
+        width: 100%;
+        border-left: 3px solid white;
+        background-color: #2f2f2f;
+        padding: 2px 5px;
+        border-radius: 5px;
+        font-size: 14px;
+        line-height: 1.4;
+        transition: .2s background-color ease-in-out;
+
+        &:hover {
+          background-color: #353535;
+        }
+
+        h4, p {
+          font-size: 14px;
+        }
+
+        p {
+          color: #a9a9a9;
+        }
+      }
+
+      svg {
+        display: flex;
+        width: 25px;
+        height: 25px;
+        padding: 8px;
+        color: #a9a9a9;
       }
     }
 
-    &:first-child, &:last-child {
-      ul {
-        top: unset;
-        bottom: calc(100% + 10px);
-      }
-    }
+    .InputBlock {
+      display: flex;
+      align-items: end;
+      width: 100%;
+      min-height: 40px;
 
-    > button {
-      ul {
-        right: 0;
-        transform-origin: bottom right;
-      }
-    }
+      textarea {
+        align-self: center;
+        caret-color: #656565;
+        width: 100%;
+        color: white;
+        line-height: 1.5;
+        padding: 0 8px;
+        overflow-wrap: break-word;
 
-    >:first-child {
-      ul {
-        left: 0;
-        transform-origin: bottom left;
+        &::placeholder {
+          color: #989898;
+        }
+      }
+
+      &:first-child, &:last-child {
+        ul {
+          top: unset;
+          bottom: calc(100% + 10px);
+        }
+      }
+
+      > button {
+        ul {
+          right: 0;
+          transform-origin: bottom right;
+        }
+      }
+
+      >:first-child {
+        ul {
+          left: 0;
+          transform-origin: bottom left;
+        }
       }
     }
   }
