--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -70,6 +70,7 @@
   .MessageBlock {
     position: absolute;
     display: flex;
+    align-items: start;
     flex-direction: column;
     gap: 8px;
     color: white;
