--- a/src/components/main/mainContainer/style.module.css
+++ b/src/components/main/mainContainer/style.module.css
@@ -17,7 +17,7 @@
   display: flex;
   width: 100%;
   height: 100vh;
-  background: linear-gradient(300deg, rgba(0, 0, 0, 0.8) 0%, rgba(70, 0, 140, 0.2) 50%, rgba(70, 0, 0, 0.6) 100%);
+  background: rgba(0, 0, 0, 0.1);
 }
 
 /*# sourceMappingURL=style.module.css.map */
