--- a/src/components/chat/style.module.scss
+++ b/src/components/chat/style.module.scss
@@ -1,6 +1,14 @@
 @use '../../utils/styles/base/_variables.css' as v;
 @import url("../../utils/styles/base/_normalize.scss");
 
+.Wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: calc(100vw - 420px);
+  min-width: 500px;
+}
+
 .ChatContainer {
   display: flex;
   align-items: center;
@@ -65,6 +73,10 @@
         color: #a9a9a9;
       }
     }
+
+    > :first-child {
+      display: none;
+    }
   }
 
   .MessageBlock {
@@ -86,5 +98,19 @@
 
   > :last-child {
     max-width: 700px;
+  }
+}
+
+@media screen and (max-width: 940px) {
+  .Wrapper {
+    width: 100%;
+  }
+
+  .ChatContainer {
+    header {
+      > :first-child {
+        display: block;
+      }
+    }
   }
 }
