--- a/src/components/popup/popupInputBlock/style.module.css
+++ b/src/components/popup/popupInputBlock/style.module.css
@@ -30,20 +30,23 @@
   align-items: center;
   gap: 8px;
   line-height: 1.4;
-  width: calc(100% - 65px);
+  width: calc(100% - 66px);
 }
-.FilesBlock > div h4 {
+.FilesBlock > div > div {
+  width: 100%;
+}
+.FilesBlock > div > div h4 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
   font-size: 15px;
 }
-.FilesBlock > div p {
+.FilesBlock > div > div p {
   font-size: 13px;
 }
 .FilesBlock > div svg, .FilesBlock > div label {
-  width: 50px;
-  height: 50px;
+  min-width: 50px;
+  min-height: 50px;
   stroke-width: 1px;
 }
 
