--- a/src/components/popup/popupInputBlock/style.module.scss
+++ b/src/components/popup/popupInputBlock/style.module.scss
@@ -35,22 +35,26 @@
     align-items: center;
     gap: 8px;
     line-height: 1.4;
-    width: calc(100% - 65px);
+    width: calc(100% - 66px);
 
-    h4 {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      font-size: 15px;
-    }
+    > div {
+      width: 100%;
 
-    p {
-      font-size: 13px;
+      h4 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 15px;
+      }
+
+      p {
+        font-size: 13px;
+      }
     }
 
     svg, label {
-      width: 50px;
-      height: 50px;
+      min-width: 50px;
+      min-height: 50px;
       stroke-width: 1px;
     }
   }
