--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -11,7 +11,10 @@
   height: 100vh;
   background-color: #212121;
   border-right: 1px solid #2f2f2f;
-  padding: 0 8px;
+
+  .Wrapper {
+    min-width: 420px;
+  }
 }
 
 .RightSidebarContainer {
@@ -19,9 +22,21 @@
   border-left: 1px solid #2f2f2f;
   border-right: none;
   align-items: center;
-  max-width: 420px;
   padding: 0;
   background-color: #181818;
   overflow-y: auto;
   overflow-x: hidden;
+}
+
+.LeftSidebarContainer {
+  .Wrapper {
+    padding: 0 8px;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  .RightSidebarContainer {
+    position: absolute;
+    z-index: 5;
+  }
 }
