fix: fixed some errors on the server

--- a/src/components/authForm/style.module.css
+++ b/src/components/authForm/style.module.css
@@ -20,6 +20,7 @@
   display: none;
 }
 .AuthContainer .AuthForm > div {
+  position: relative;
   flex-direction: column;
   gap: 30px;
   width: 100%;
