feat: new components added

--- a/src/components/inputForm/style.module.scss
+++ b/src/components/inputForm/style.module.scss
@@ -1,5 +1,5 @@
-@use '../../../utils/styles/base/_variables' as v;
-@import url("../../../utils/styles/base/_normalize.scss");
+@use '../../utils/styles/base/variables' as v;
+@import url("../../utils/styles/base/_normalize.scss");
 
 .InputBlock {
   position: relative;
