--- a/src/components/sidebar/leftSidebar/style.module.css
+++ b/src/components/sidebar/leftSidebar/style.module.css
@@ -2,9 +2,31 @@
 
 .TopBar {
   display: flex;
+  align-items: center;
   padding: 8px 8px;
   width: 100%;
   height: 56px;
+}
+.TopBar h1 {
+  color: white;
+  font-size: 20px;
+  padding-left: 24px;
+}
+
+.CreateButton {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+.CreateButton > button > svg {
+  width: 26px;
+  height: 26px;
+}
+.CreateButton > button ul {
+  top: unset;
+  bottom: calc(100% + 8px);
+  right: 0;
+  transform-origin: bottom right;
 }
 
 /*# sourceMappingURL=style.module.css.map */
