--- a/src/components/sidebar/leftSidebar/style.module.scss
+++ b/src/components/sidebar/leftSidebar/style.module.scss
@@ -3,7 +3,34 @@
 
 .TopBar {
   display: flex;
+  align-items: center;
   padding: 8px 8px;
   width: 100%;
   height: 56px;
+
+  h1 {
+    color: white;
+    font-size: 20px;
+    padding-left: 24px;
+  }
+}
+
+.CreateButton {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+
+  > button {
+    > svg {
+      width: 26px;
+      height: 26px;
+    }
+
+    ul {
+      top: unset;
+      bottom: calc(100% + 8px);
+      right: 0;
+      transform-origin: bottom right;
+    }
+  }
 }
