--- a/src/components/sidebar/style.module.css
+++ b/src/components/sidebar/style.module.css
@@ -30,6 +30,12 @@
   padding: 0 8px;
 }
 
+.LeftSidebarContainerSettings {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @media screen and (max-width: 1280px) {
   .RightSidebarContainer {
     position: absolute;
