--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -34,6 +34,12 @@
   }
 }
 
+.LeftSidebarContainerSettings {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 @media screen and (max-width: 1280px) {
   .RightSidebarContainer {
     position: absolute;
