--- a/src/components/sidebar/leftSidebar/messenger/style.module.scss
+++ b/src/components/sidebar/leftSidebar/messenger/style.module.scss
@@ -4,7 +4,7 @@
 .TopBar {
   display: flex;
   align-items: center;
-  padding: 8px 8px;
+  padding: 8px;
   width: 100%;
   height: 56px;
 
@@ -16,29 +16,58 @@
 }
 
 .MessengerForm {
-  display: flex;
-  flex-direction: column;
+  position: relative;
   gap: 24px;
+  padding: 16px 8px;
+
+  &, .ContactsContainer {
+    display: flex;
+    flex-direction: column;
+  }
 
   .FileBlock {
     display: flex;
     justify-content: center;
 
-    div {
-      background-color: #98989A;
-      border-radius: 50%;
-    }
-
-    svg, img {
-      color: white;
-      height: 160px;
-      width: 160px;
+    > label {
+      display: flex;
       cursor: pointer;
     }
 
+    div {
+      display: flex;
+      background-color: #181818;
+      border-radius: 50%;
+      padding: 25px;
+
+      > svg {
+        color: white;
+        height: 70px;
+        width: 70px;
+      }
+    }
+
     img {
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
+    }
+  }
+
+  > p {
+    position: absolute;
+    bottom: -24px;
+    left: 0;
+    padding: 0 8px;
+    color: #747474;
+    font-size: 14px;
+  }
+
+  .ContactsContainer {
+    > :first-child {
+      height: 42px;
+      margin-bottom: 16px;
     }
   }
 }
