--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -11,6 +11,7 @@
   height: 100vh;
   background-color: #212121;
   border-right: 1px solid #2f2f2f;
+  overflow: hidden;
 
   .Wrapper {
     min-width: 420px;
@@ -38,6 +39,11 @@
   position: absolute;
   top: 0;
   left: 0;
+  background-color: #181818;
+
+  .Wrapper {
+    background-color: #212121;
+  }
 }
 
 @media screen and (max-width: 1280px) {
