feat: new components added

--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -98,3 +98,26 @@
     background-color: #282828;
   }
 }
+
+.Checkbox {
+  height: 16px;
+  width: 16px;
+  border: 2px solid #8c959b;
+  background-color: #212121;
+  border-radius: 4px;
+
+  &:checked {
+    background-color: #8c959b;
+  }
+
+  &:before {
+    content: '';
+    display: inline-block;
+    transform: rotate(45deg);
+    height: 8px;
+    width: 4px;
+    margin: 0 0 1.2px 5px;
+    border-bottom: 2.5px solid #212121FF;
+    border-right: 2.5px solid #212121FF;
+  }
+}
