--- a/src/components/contacts/style.module.css
+++ b/src/components/contacts/style.module.css
@@ -3,16 +3,16 @@
 .ContactBlock {
   display: flex;
   align-items: center;
-  gap: 16px;
+  gap: 18px;
   padding: 4px 16px;
   cursor: pointer;
   border-radius: 10px;
 }
-.ContactBlock > :first-child {
+.ContactBlock > span > * {
   width: 42px;
   height: 42px;
 }
-.ContactBlock > :first-child h1 {
+.ContactBlock > span > * h1 {
   font-size: 16px;
 }
 .ContactBlock .ContactInfo {
