--- a/src/components/contacts/AddContacts/style.module.scss
+++ b/src/components/contacts/AddContacts/style.module.scss
@@ -43,8 +43,8 @@
     display: flex;
     flex-wrap: wrap;
     gap: 8px;
-
-    > span {
+    
+    .RemoveMemberButton {
       display: flex;
       align-items: center;
       gap: 8px;
@@ -68,6 +68,10 @@
         h1 {
           font-size: 14px;
         }
+      }
+
+      &:hover {
+        background-color: #322525;
       }
     }
   }
