fix: fixed some errors

--- a/src/components/inputForm/style.module.css
+++ b/src/components/inputForm/style.module.css
@@ -31,6 +31,10 @@ small {
   bottom: -25px;
   color: #ca0000;
   font-size: 14px;
+  line-height: 1.5;
+}
+small::first-letter {
+  text-transform: capitalize;
 }
 
 /*# sourceMappingURL=style.module.css.map */
