perf: some components have been optimized

--- a/src/components/inputForm/style.module.css
+++ b/src/components/inputForm/style.module.css
@@ -21,6 +21,9 @@
   color: white;
   box-shadow: 0 0 0 2px white;
 }
+.InputBlock input::placeholder, .InputBlock textarea::placeholder {
+  text-transform: capitalize;
+}
 .InputBlock textarea {
   word-wrap: break-word;
   word-break: break-all;
