--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -99,13 +99,21 @@
   }
 }
 
+.ContactButton, .CheckboxContainer {
+  padding: 4px 16px;
+  border-radius: 10px;
+  transition: 0.2s background-color ease-in-out;
+
+  &:hover {
+    background-color: #2b2b2b;
+  }
+}
+
 .CheckboxContainer {
   display: flex;
   align-items: center;
   gap: 18px;
-  padding: 4px 16px;
   cursor: pointer;
-  border-radius: 10px;
 
   > input {
     height: 16px;
@@ -128,9 +136,5 @@
       border-bottom: 2.5px solid #212121FF;
       border-right: 2.5px solid #212121FF;
     }
-  }
-
-  &:hover {
-    background-color: #2b2b2b;
   }
 }
