--- a/src/components/searchBlock/style.module.css
+++ b/src/components/searchBlock/style.module.css
@@ -4,7 +4,7 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 42px;
   padding: 0 8px;
   transform-origin: right;
 }
