--- a/src/components/searchBlock/style.module.scss
+++ b/src/components/searchBlock/style.module.scss
@@ -5,7 +5,7 @@
   position: relative;
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 42px;
   padding: 0 8px;
   transform-origin: right;
 
