--- a/src/components/contactList/style.module.css
+++ b/src/components/contactList/style.module.css
@@ -3,6 +3,7 @@
 .ContactListContainer {
   display: flex;
   flex-direction: column;
+  padding: 0 8px;
 }
 .ContactListContainer > p {
   color: white;
