--- a/src/components/dropDown/style.module.scss
+++ b/src/components/dropDown/style.module.scss
@@ -41,9 +41,13 @@
       cursor: pointer;
     }
 
-    svg {
+    > div, svg {
       width: 24px;
       height: 24px;
+    }
+
+    > div {
+      box-shadow: 0 0 0 2px rgb(33, 33, 33, .8);
     }
 
     &:hover {
