--- a/src/components/sidebar/rightSidebar/style.module.css
+++ b/src/components/sidebar/rightSidebar/style.module.css
@@ -1,44 +1,5 @@
 @import url("../../../utils/styles/base/_normalize.scss");
 
-.TopBar {
-  position: absolute;
-  z-index: 1;
-  color: white;
-  min-width: 420px;
-  height: 56px;
-  background-color: rgba(33, 33, 33, 0.9);
-  backdrop-filter: blur(5px);
-  display: flex;
-  justify-content: space-between;
-  padding: 8px 8px;
-  font-size: 20px;
-}
-.TopBar h1 {
-  margin: auto 0;
-  text-transform: capitalize;
-}
-
-.EntityImageBlock {
-  display: flex;
-  align-items: end;
-  width: 100%;
-  height: 420px;
-  background-size: cover;
-  background-position: center center;
-  padding: 8px 16px;
-}
-.EntityImageBlock .TitleBlock {
-  line-height: 1.3;
-}
-.EntityImageBlock .TitleBlock h1 {
-  color: white;
-  font-size: 20px;
-}
-.EntityImageBlock .TitleBlock p {
-  font-size: 14px;
-  color: #a9a9a9;
-}
-
 .EntityIconBlock {
   display: flex;
   justify-content: center;
@@ -78,7 +39,7 @@
   display: flex;
   width: 100%;
 }
-.InfoList li > div {
+.InfoList li > button {
   cursor: pointer;
   color: white;
   font-size: 16px;
@@ -87,30 +48,33 @@
   border-radius: 10px;
   transition: 0.2s background-color ease-in-out;
 }
-.InfoList li > div, .InfoList li > div span {
+.InfoList li > button, .InfoList li > button span {
   display: flex;
   align-items: center;
   gap: 16px;
 }
-.InfoList li > div .LiType {
+.InfoList li > button .LiType {
   font-size: 14px;
   color: #a9a9a9;
 }
-.InfoList li > div:hover {
+.InfoList li > button:hover {
   background-color: #2b2b2b;
 }
-.InfoList li > div:active {
+.InfoList li > button:active {
   background-color: #323232;
 }
-.InfoList li > div svg {
+.InfoList li > button svg {
   min-width: 28px;
   min-height: 28px;
 }
-.InfoList li > div button {
+.InfoList li > button div {
   margin: 0 8px 0 auto;
 }
-.InfoList li > div small {
+.InfoList li > button small {
+  position: relative;
+  bottom: unset;
   display: block;
+  line-height: 1.3;
 }
 
 /*# sourceMappingURL=style.module.css.map */
