--- a/src/components/sidebar/rightSidebar/style.module.scss
+++ b/src/components/sidebar/rightSidebar/style.module.scss
@@ -1,49 +1,6 @@
 @use '../../../utils/styles/base/_variables.css' as v;
 @import url("../../../utils/styles/base/_normalize.scss");
 
-.TopBar {
-  position: absolute;
-  z-index: 1;
-  color: white;
-  min-width: 420px;
-  height: 56px;
-  background-color: rgba(33, 33, 33, 0.9);
-  backdrop-filter: blur(5px);
-  display: flex;
-  justify-content: space-between;
-  padding: 8px 8px;
-  font-size: 20px;
-
-  h1 {
-    margin: auto 0;
-    text-transform: capitalize;
-  }
-}
-
-.EntityImageBlock {
-  display: flex;
-  align-items: end;
-  width: 100%;
-  height: 420px;
-  background-size: cover;
-  background-position: center center;
-  padding: 8px 16px;
-
-  .TitleBlock {
-    line-height: 1.3;
-
-    h1 {
-      color: white;
-      font-size: 20px;
-    }
-
-    p {
-      font-size: 14px;
-      color: #a9a9a9;
-    }
-  }
-}
-
 .EntityIconBlock {
   display: flex;
   justify-content: center;
@@ -88,7 +45,7 @@
     display: flex;
     width: 100%;
 
-    > div {
+    > button {
       cursor: pointer;
 
       &, span {
@@ -122,12 +79,15 @@
         min-height: 28px;
       }
 
-      button {
+      div {
         margin: 0 8px 0 auto;
       }
 
       small {
+        position: relative;
+        bottom: unset;
         display: block;
+        line-height: 1.3;
       }
     }
   }
