--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -14,6 +14,7 @@
   overflow: hidden;
 
   .Wrapper {
+    overflow-y: auto;
     min-width: 420px;
   }
 }
@@ -31,8 +32,6 @@
 
 .LeftSidebarContainer {
   .Wrapper {
-    padding: 0 8px 8px 8px;
-
     hr {
       border: none;
       border-top: 1px solid #2f2f2f;
