--- a/src/components/dropDown/style.module.scss
+++ b/src/components/dropDown/style.module.scss
@@ -47,7 +47,8 @@
     }
 
     > div {
-      box-shadow: 0 0 0 2px rgb(33, 33, 33, .8);
+      border: 2px solid rgba(0, 0, 0, 0);
+      outline: 3px solid rgb(33, 33, 33, .8);
     }
 
     &:hover {
